RESOLVED FIXED238979
[WinCairo] Fix DrawingAreaWC after r292557
https://bugs.webkit.org/show_bug.cgi?id=238979
Summary [WinCairo] Fix DrawingAreaWC after r292557
Stephan Szabo
Reported 2022-04-07 21:01:52 PDT
r292557 caused build errors in WinCairo
Attachments
[fast-cq] Build Fix (1.79 KB, patch)
2022-04-07 21:05 PDT, Stephan Szabo
no flags
Stephan Szabo
Comment 1 2022-04-07 21:05:03 PDT
Created attachment 457011 [details] [fast-cq] Build Fix
EWS
Comment 2 2022-04-07 21:08:12 PDT
Committed r292590 (249423@main): <https://commits.webkit.org/249423@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 457011 [details].
Radar WebKit Bug Importer
Comment 3 2022-04-07 21:09:17 PDT
Note You need to log in before you can comment on or make changes to this bug.