[WinCairo] Fix DrawingAreaWC after r292557 https://bugs.webkit.org/show_bug.cgi?id=238979

Unreviewed build fix


* WebProcess/WebPage/wc/DrawingAreaWC.cpp:

Canonical link: https://commits.webkit.org/249423@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292590 268f45cc-cd09-0410-ab3c-d52691b4dbfc